force-app/main/default/objects/Case_Event__c/Case_Event__c.object-meta.xml
<CustomObject>
    <description>Case Event object from Roadnet</description>
    <label>Case Event</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>