force-app/main/default/objects/Case_Event__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Case__r.AccountName__c</formula>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>