force-app/main/default/objects/Case_Event__c/fields/Assisting_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assisting_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assisting Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Events</relationshipName>
    <type>Lookup</type>
</CustomField>