force-app/main/default/objects/Case_Event__c/fields/Assisting_Techs__c.field-meta.xml
<CustomField>
    <fullName>Assisting_Techs__c</fullName>
    <label>Assisting Techs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Akpaidem, Kufre</fullName>
            </value>
            <value>
                <fullName>Berman, Joshua</fullName>
            </value>
            <value>
                <fullName>Burk, Darrell</fullName>
            </value>
            <value>
                <fullName>Campiglio, Alessandro</fullName>
            </value>
            <value>
                <fullName>Carroll, Geavonna</fullName>
            </value>
            <value>
                <fullName>Cheezum, Trevor</fullName>
            </value>
            <value>
                <fullName>Dean, Matt</fullName>
            </value>
            <value>
                <fullName>Dowd, Amanda</fullName>
            </value>
            <value>
                <fullName>Duncan, Tina</fullName>
            </value>
            <value>
                <fullName>Eberhart, David</fullName>
            </value>
            <value>
                <fullName>Evans, Zach</fullName>
            </value>
            <value>
                <fullName>Ginn, David</fullName>
            </value>
            <value>
                <fullName>Grueninger, Lisa</fullName>
            </value>
            <value>
                <fullName>Harris, Linda</fullName>
            </value>
            <value>
                <fullName>Harris, Teri</fullName>
            </value>
            <value>
                <fullName>Holman, Dennis</fullName>
            </value>
            <value>
                <fullName>LaMarr, Guy</fullName>
            </value>
            <value>
                <fullName>Leon, Alex</fullName>
            </value>
            <value>
                <fullName>Maslow, Rachel</fullName>
            </value>
            <value>
                <fullName>Ozeryan, Vladimir</fullName>
            </value>
            <value>
                <fullName>Posada, Kristal</fullName>
            </value>
            <value>
                <fullName>Schulman, Casey</fullName>
            </value>
            <value>
                <fullName>Struckmeier, Brian</fullName>
            </value>
            <value>
                <fullName>Wajer, John</fullName>
            </value>
            <value>
                <fullName>Watson, Colleen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>