force-app/main/default/objects/Case_Event__c/fields/Case_Comment_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment_ID__c</fullName>
    <label>Case Comment ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>