force-app/main/default/objects/Case_Event__c/fields/Case_Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Recordtype_Name__c</fullName>
    <formula>Case__r.RecordType.Name</formula>
    <label>Case Recordtype Name</label>
    <type>Text</type>
</CustomField>