force-app/main/default/objects/Case_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Events</relationshipLabel>
    <relationshipName>Case_Events</relationshipName>
    <type>Lookup</type>
</CustomField>