force-app/main/default/objects/Case_Event__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Case__r.Contact.FirstName + &quot; &quot; + Case__r.Contact.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>