force-app/main/default/objects/Case_Event__c/fields/Created_By_VF_Page__c.field-meta.xml
<CustomField>
    <fullName>Created_By_VF_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By VF Page</label>
    <type>Checkbox</type>
</CustomField>