force-app/main/default/objects/Case_Event__c/fields/CreatedDateForm__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateForm__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>CreatedDateForm</label>
    <type>Date</type>
</CustomField>