force-app/main/default/objects/Case_Event__c/fields/Display_in_Customer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Customer_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in Customer Portal</label>
    <type>Checkbox</type>
</CustomField>