force-app/main/default/objects/Case_Event__c/fields/Send_email_notification_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Send_email_notification_to_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send email notification to contact</label>
    <type>Checkbox</type>
</CustomField>