force-app/main/default/objects/Case_Event__c/fields/ShadowId__c.field-meta.xml
<CustomField>
    <fullName>ShadowId__c</fullName>
    <label>ShadowId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>